// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfiniteHits accepts a custom className 1`] = `
<div
  className="ais-InfiniteHits MyCustomInfiniteHits"
>
  <ul
    className="ais-InfiniteHits-list"
  >
    <li
      className="ais-InfiniteHits-item"
    >
      <div>
        {"objectID":0}
      </div>
    </li>
    <li
      className="ais-InfiniteHits-item"
    >
      <div>
        {"objectID":1}
      </div>
    </li>
    <li
      className="ais-InfiniteHits-item"
    >
      <div>
        {"objectID":2}
      </div>
    </li>
  </ul>
  <button
    className="ais-InfiniteHits-loadMore ais-InfiniteHits-loadMore--disabled"
    disabled={true}
    onClick={[Function]}
  >
    Load more
  </button>
</div>
`;

exports[`InfiniteHits accepts a hitComponent prop 1`] = `
<div
  className="ais-InfiniteHits"
>
  <ul
    className="ais-InfiniteHits-list"
  >
    <li
      className="ais-InfiniteHits-item"
    >
      <div>
        {"objectID":0}
      </div>
    </li>
    <li
      className="ais-InfiniteHits-item"
    >
      <div>
        {"objectID":1}
      </div>
    </li>
    <li
      className="ais-InfiniteHits-item"
    >
      <div>
        {"objectID":2}
      </div>
    </li>
  </ul>
  <button
    className="ais-InfiniteHits-loadMore ais-InfiniteHits-loadMore--disabled"
    disabled={true}
    onClick={[Function]}
  >
    Load more
  </button>
</div>
`;
